fixed spacing

--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ a:not(.abs-icon):hover{
     align-items: center;
     justify-content: center;
     margin: 1vh;
-    height: 100%;
+    height: 90%;
     background-size: cover;
     
 }
@@ -124,7 +124,6 @@ a:not(.abs-icon):hover{
 }
 
 .nav-bar{
-    padding-top: 2%;
     font-size: 3vw;
     color: black;
     animation: fadeinSlideleftNoDelay ease-in-out 2s;
